Improve editor responsiveness and saving